force-app/src/objects/c2g__PlaybookTaskApprover__c.object
<CustomObject>
    <description>Stores the approver, the associated task, and permits the approver to approve the associated task.</description>
    <fields>
        <fullName>c2g__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the approver assigned to approve the task.</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PlaybookTaskApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaskDueDate__c</fullName>
        <description>The due date for the task.</description>
        <formula>c2g__Task__r.c2g__DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TaskStatus__c</fullName>
        <description>The status set for the playbook task.</description>
        <formula>TEXT(c2g__Task__r.c2g__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Task__c</fullName>
        <description>The playbook task to which the approver is assigned to approve.</description>
        <label>Task</label>
        <referenceTo>c2g__PlaybookTask__c</referenceTo>
        <relationshipLabel>Playbook Task Approvers</relationshipLabel>
        <relationshipName>PlaybookTaskApprovers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Accounting Playbook Task Approver</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>c2g__Approver__c</columns>
        <columns>c2g__Task__c</columns>
        <columns>c2g__TaskStatus__c</columns>
        <columns>c2g__TaskDueDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Playbook Task Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>